<?xml version="1.0"?>
<package format="3">
  <name>so101_leader_description</name>
  <version>0.1.0</version>
  <description>SO-101 robot description package prepared for MoveIt Setup Assistant.</description>

  <maintainer email="todo@example.com">SO-ARM101 User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
